Backed out changeset a9de76765bad on a CLOSED TREE from bug 850336 for its test taking too long.
UltraBlame original commit: 0b7e95999fffb01bd343833cd9f025857251424f

--- a/browser/devtools/layoutview/view.css
+++ b/browser/devtools/layoutview/view.css
@@ -305,28 +305,9 @@ events
 :
 auto
 ;
-}
-.
-size
->
-span
-{
 cursor
 :
 default
-;
-}
-.
-editable
-{
--
-moz
--
-user
--
-select
-:
-text
 ;
 }
 .
